# browser-automation-test

./: .gitignore  CMakeLists.txt  README.md
cmake/nsis/: NSIS.template.in
installer/: CMakeLists.txt
modules/App/: CMakeLists.txt
modules/App/src/: Controller.cpp  Controller.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  pch.h
scripts/: build-gcc-x64-debug  build-gcc-x64-release  build-vc14-x64-release.cmd  build-vc15-x64-release.cmd  clean  clean.cmd  cmakegen-gcc-x64-debug  cmakegen-gcc-x64-release  cmakegen-vc14-x64-debug.cmd  cmakegen-vc14-x64-release.cmd  cmakegen-vc15-x64-debug.cmd  cmakegen-vc15-x64-release.cmd
